--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ default: &default
 development:
   adapter: postgresql
   encoding: unicode
-  database: CoverLetter_development
+  database: rbcl_db_as_kdrams
   pool: 5
   username: kdrams
   password: moneymoney
