--- a/config/s3.yml
+++ b/config/s3.yml
@@ -7,4 +7,6 @@ test:
   <<: *development
 
 production:
-  <<: *development
+  bucket: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
