--- a/config/s3.yml
+++ b/config/s3.yml
@@ -1,5 +1,5 @@
 development: &development
-  bucket: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  bucket: <%= ENV['S3_BUCKET_NAME']%>
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
   secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 
